added mp4 and mp3 decoders for further work out-of-gui